# nie

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  IMPROVEMENTS.md  LEGAL.md  README.md  codemagic.yaml  nie-brief.md  nie-py.py  pubspec.yaml
.beads/: .gitignore  config_kv.json  metadata.json
.beads/issues/: AGORA-4uk.json  AGORA-hj6.json  agora-7g2k.1.json  agora-7g2k.11.json  agora-7g2k.2.json  agora-7g2k.json  agoraold-060.1.json  agoraold-060.2.json  agoraold-060.3.json  agoraold-060.4.json  agoraold-060.json  agoraold-07t.json  agoraold-0aj.json  agoraold-0bj.json  agoraold-0dg.json  agoraold-0dx.json  agoraold-0ip.json  agoraold-0lap.json  agoraold-0o9.1.json  agoraold-0o9.2.json  agoraold-0o9.3.json  agoraold-0o9.4.json  agoraold-0o9.5.json  agoraold-0o9.6.json  agoraold-0o9.7.json  agoraold-0o9.8.json  agoraold-0o9.9.json  agoraold-0o9.json  agoraold-0pne.1.json  agoraold-0pne.10.json  agoraold-0pne.11.json  agoraold-0pne.12.json  agoraold-0pne.13.json  agoraold-0pne.14.json  agoraold-0pne.15.json  agoraold-0pne.16.json  agoraold-0pne.17.json  agoraold-0pne.18.json  agoraold-0pne.19.json  agoraold-0pne.2.json  (+3066 more)
.github/workflows/: ci.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_notification.xml
audit-20260419-200613/: nie-hlns_phase3_done.txt  status.md
bot/: Cargo.toml
bot/src/: config.rs  dispatcher.rs  error.rs  io_types.rs  main.rs  payment.rs  scripting.rs  stdin_reader.rs
bot/tests/: self_test.rs
bridge-jmap/: Cargo.toml
bridge-jmap/src/: bridge.rs  config.rs  jmap.rs  main.rs
bridge-matrix/: Cargo.toml
bridge-matrix/src/: bridge.rs  config.rs  main.rs  matrix.rs
bridge-slack/: Cargo.toml
bridge-slack/src/: bridge.rs  config.rs  main.rs  slack.rs
bridge-teams/: Cargo.toml
bridge-teams/src/: bridge.rs  config.rs  main.rs  teams.rs
cli/: Cargo.toml
cli/src/: commands.rs  config.rs  history.rs  lib.rs  main.rs  profile.rs
cli/tests/: e2e_payment.rs
core/: Cargo.toml
core/src/: amount.rs  auth.rs  coin.rs  hpke.rs  identity.rs  keyfile.rs  lib.rs  messages.rs  mls.rs  pow.rs  protocol.rs  transport.rs  wallet.rs
daemon/: Cargo.toml
daemon/src/: api.rs  jmap.rs  lib.rs  main.rs  pid.rs  relay.rs  state.rs  store.rs  token.rs  types.rs  web.rs  ws_events.rs
daemon/tests/: e2e.rs  integration.rs
daemon/web/: index.html
deploy/: Caddyfile
deploy/dev/: Caddyfile  mkcert-setup.sh
desktop/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: agora-cio-assessment-clean.md  agora-compliance-legal-howto-clean.md  agora-futures.md  agora-gsuite-employer-managed-did-spec-clean.md  agora-o365-employer-managed-did-spec-clean.md  agora-onboarding-tool-spec-clean.md  agora-prfaq-clean.md  agora-privacy-whitepaper-clean.md  agora-protocol-spec-unified.md  agora-purview-bridge-spec-clean.md  agora-regulators-guide.md  agora-relay-ops-spec.md  agora-universal-idp-did-spec-clean.md
docs/ATTIC/: agora-cio-assessment.md  agora-compliance-legal-howto.md  agora-gsuite-employer-managed-did-spec.md  agora-o365-employer-managed-did-spec.md  agora-onboarding-tool-spec.md  agora-prfaq.md  agora-privacy-whitepaper (1).md  agora-privacy-whitepaper.md  agora-protocol-spec (1).md  agora-protocol-spec (2).md  agora-protocol-spec (3).md  agora-protocol-spec (4).md  agora-protocol-spec (5).md  agora-protocol-spec (7).md  agora-protocol-spec-v0.1-integrated (1).md  agora-protocol-spec-v0.1-integrated (2).md  agora-protocol-spec-v0.1-integrated (3).md  agora-protocol-spec-v0.1-integrated (4).md  agora-protocol-spec-v0.1-integrated (5).md  agora-protocol-spec-v0.1-integrated (7).md  agora-protocol-spec-v0.1-integrated (8).md  agora-protocol-spec-v0.1-integrated (9).md  agora-protocol-spec-v0.1-integrated.md  agora-protocol-spec.md  agora-purview-bridge-spec.md  agora-spec-patch-dm-compliance.md  agora-universal-idp-did-spec.md  rlchat-protocol-spec (1).md  rlchat-protocol-spec (2).md  rlchat-protocol-spec-clean.md  rlchat-protocol-spec.md
docs/IETF/: README.md  draft-ietf-mimi-arch-02.txt  draft-ietf-mimi-content-08.txt  draft-ietf-mimi-protocol-05.txt  draft-ietf-mimi-room-policy-03.txt  draft-ietf-mls-combiner-02.txt  draft-ietf-mls-extensions-09.txt  draft-ietf-mls-federation-03.txt  draft-ietf-mls-partial-00.txt  draft-ietf-mls-pq-ciphersuites-04.txt  draft-ietf-mls-ratchet-tree-options-00.txt  draft-ietf-mls-targeted-messages-00.txt  draft-ietf-mls-virtual-clients-00.txt
ffi/: Cargo.toml
ffi/src/: lib.rs
ffi/src/api/: client.rs  identity.rs  mod.rs
flutter/: codemagic.yaml  pubspec.yaml
flutter/lib/: main.dart
flutter/lib/src/rust/: frb_generated.dart
flutter/lib/src/screens/: setup_screen.dart
flutter/lib/src/services/: identity_service.dart  relay_service.dart
lib/: app.dart  main.dart
lib/src/rust/api/: client.dart  identity.dart
lib/src/screens/: chat_screen.dart  setup_screen.dart
lib/src/services/: background_service.dart  identity_service.dart  relay_service.dart
lib/src/widgets/: message_bubble.dart  user_tile.dart
nie-monero/: Cargo.toml
nie-monero/src/: lib.rs
relay/: Cargo.toml
relay/src/: bus.rs  lib.rs  main.rs  payment_watcher.rs  state.rs  store.rs  transparency.rs  ws.rs
relay/tests/: dm_tests.rs  e2e_jsonrpc.rs  e2e_proxy.rs  pow_e2e.rs  sealed_sender_e2e.rs  sealed_sender_relay.rs  socks5_helper.rs  stress.rs  wasm_protocol.rs
scripts/: cm
tui/: Cargo.toml
tui/src/: app.rs  event.rs  main.rs  ui.rs
tui/tests/: e2e.rs
wallet/: Cargo.toml  build.rs
wallet/proto/: compact_formats.proto  service.proto
wallet/src/: address.rs  client.rs  db.rs  fees.rs  lib.rs  memo.rs  orchard.rs  params.rs  payment.rs  scanner.rs  sync_guard.rs  tx_builder.rs  tx_error.rs  unified.rs
wallet/tests/: e2e_testnet.rs  ivk_decryption.rs  witness_tracking.rs  witness_tracking_db.rs
wasm/: Cargo.toml
wasm/src/: api.rs  client.rs  lib.rs  storage.rs  transport.rs
wasm/tests/: wasm.rs
wasm/web/: index.html
(+4 files in other folders)
