[package]
name = "bridge-jmap"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nie-bridge-jmap"
path = "src/main.rs"

[dependencies]
nie-core.workspace = true
anyhow.workspace = true
url.workspace = true
clap = { version = "4", features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
