[package]
name = "nie-bridge-matrix"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nie-bridge-matrix"
path = "src/main.rs"

[dependencies]
nie-core.workspace = true
reqwest.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
uuid.workspace = true
subtle.workspace = true
urlencoding = "2"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
