[package]
name = "bridge-teams"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nie-bridge-teams"
path = "src/main.rs"

[dependencies]
nie-core.workspace = true
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
clap = { version = "4", features = ["derive"] }
hmac.workspace = true
hex.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
