[package]
name = "nie-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
nie-core = { workspace = true }
nie-wallet = { path = "../wallet" }
axum = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "validate-request"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
ulid = "1.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
subtle = "2"
rand = { workspace = true }
base64 = { workspace = true }
libc = "0.2"

[dev-dependencies]
nie-relay = { path = "../relay" }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { workspace = true }
futures-util = "0.3"
