[package]
name = "nie-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "nie_relay"
path = "src/lib.rs"

[[bin]]
name = "nie-relay"
path = "src/main.rs"

[features]
redis-bus = ["dep:redis"]

[dependencies]
redis = { version = "0.24", features = ["tokio-comp", "aio"], optional = true }
nie-core.workspace = true
nie-wallet.workspace = true
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
dashmap = "6"
futures.workspace = true
jubjub.workspace = true
sapling.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rand.workspace = true
unicode-normalization = "0.1"
zcash_address.workspace = true
zcash_protocol.workspace = true

[dev-dependencies]
base64.workspace = true
rand.workspace = true
sha2.workspace = true
tempfile = "3"
tokio-tungstenite.workspace = true
