[package]
name = "nie-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nie-core = { path = "../core" }
# These must stay in lockstep — pin to exact version to prevent ABI mismatch on cargo update
wasm-bindgen = "=0.2.118"
wasm-bindgen-futures = "=0.4.68"
js-sys = "=0.3.95"
web-sys = { version = "=0.3.95", features = [
    "Window",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "EventTarget",
    "console",
    "IdbDatabase",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbRequest",
    "IdbTransaction",
    "IdbObjectStore",
    "IdbTransactionMode",
    "IdbKeyRange",
    "IdbVersionChangeEvent",
] }
console_error_panic_hook = "0.1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
sha2.workspace = true
